
	General improvements:

	all : improved error messages upon directory creation failures (#10361)

	Bugfixes:

	all : fixed errors on final vars modification with `+=`, `*=` etc operations (#10325)
	all : fixed hanging of MainLoop.add on threaded targets (#10308, #10329)
	js : fixed IntMap for keys greater than 2^31 (#10316)
	js : workaround to fix sourcemaps on Firefox in Windows (#10217)
	cs/java : fixed rest arguments for cases when only one argument is provided (#10315)
	php : fixed type of `php.db.PDO.ATTR_DRIVER_NAME` (#10319)
	eval : fixed signature of `eval.luv.Tcp.noDelay` method
	lua : fixed `string.length` when `string` has type of a type parameter constrained to `String` (#10343)
	jvm : fixed `Reflect.compare()` for different number types (#10350)

2021-07-01 4.2.3:

	General improvements:

	all : analyzer optimizations
	macro : support maps in `haxe.macro.Context.makeExpr` (#10259)
	js : added `-D js-global=globalThis` to customize global object name (#10282)
	php : added externs for `quoted_printable_decode`, `quoted_printable_encode`, `Attribute`, `NumberFormat`, `IntlCalendar` and other `Intl*` classes

	Bugfixes:

	all : fixed compiler crash on some unreachable code blocks (#10261)
	jvm : fixed `@:native` (#10280)
	jvm : fixed `--xml` generation (#10279)

2021-05-14 4.2.2:

	Bugfixes:

	all : fixed piping stdin/stdout in `--cmd` (#4669, #6726)
	all : fixed rest args typing for overloaded functions (#10143)
	all : fixed using `var` fields as static extensions (#10144)
	all : fixed completion for a type in `expr is Type` (#10167)
	all : fixed subtypes in `expr is Module.SubType` expressions (#10174)
	all : fixed typing chains of calls with constrained type params (#10198)
	all : fixed mixed constraints of anonymous structures and other types (#10162)
	all : fixed operator overloading for enum abstracts (#10173)
	hl : fixed debugging of `catch` blocks (#10109)
	jvm : fixed manifest generation for cases with a lot of jar libraries (#10157)